fixed description wrapping problem by modifiying css

--- a/includes/style.css
+++ b/includes/style.css
@@ -15,7 +15,8 @@ div.description
 {
    display: block;
    margin: 2em 0;
-
+   white-space: pre-wrap;
+   white-space: -moz-pre-wrap;
    overflow: auto;
    width: 715;
    line-height: 1.4;
